2006-02-21 Paolo Nenzi <p.nenzi@ieee.org>

 *   src/frontend/subckt.c, src/spicelib/parser/inp2q.c, 
     src/spicelib/parser/inpdomod.c: Added fifth node on bipolar devices
     (Dietmar Warning) to support newer (adms) models. Updated number of
     nodes for subcircuits. 

2006-02-19 Paolo Nenzi <p.nenzi@ieee.org>

 *   tests/bin/check.sh: added patch from Gary R. Van Sickle 
     <g.r.vansickle@worldnet.att.net>. CYGWIN system is recognized as
     an UNIX flavour (for testing).
     

2006-02-17 Paolo Nenzi <p.nenzi@ieee.org>

 *   src/spicelib/devices/dev.c: Added support for adms devices (Dietmar 
     Warning). Devices implemented: hicum0 and mextram.
     

2006-02-16 Paolo Nenzi <p.nenzi@ieee.org>

 *   src/spicelib/devices/dev.c: removed EKV ifdefs. In future versions of
     ngspice EKV (and other models) will be introduced as verilog-a models.
     

2006-01-31 Paolo Nenzi <p.nenzi@ieee.org>: 

 *   Committed the admst tree from the adms system. Laurent Lamaitre 
     <r29173@users.sourceforge.net> sent the XML code needed to generate
     ready-to-compile C code conforming to ngspice api from Verilog-AMS
     compact model description.
     
     Files changed: src/spicelib/devices/Makefile.am: added adms directory
                    to DIST_SUBDIRS target.
     Files added: README.adms, src/spicelib/devices/adms/, 
                  src/spicelib/devices/adms/admst/,
		  src/spicelib/devices/adms/admst/{COPYING,
		  ngspiceMakefile.am.xml,ngspiceMODULEacld.c.xml,
		  ngspiceMODULEask.c.xml, ngspiceMODULE.c.xml,
		  ngspiceMODULEdefs.h.xml, ngspiceMODULEext.h.xml,
		  ngspiceMODULEguesstopology.c.xml, ngspiceMODULEinit.c.xml,
		  ngspiceMODULEinit.h.xml,ngspiceMODULEitf.h.xml, 
		  ngspiceMODULEload.c.xml, ngspiceMODULEmask.c.xml,
		  ngspiceMODULEmpar.c.xml, ngspiceMODULEpar.c.xml,
		  ngspiceMODULEsetup.c.xml,ngspiceMODULEtemp.c.xml,
		  ngspiceVersion.xml}	    


2005-12-06  Dietmar Warning <warning@danalyse.de>
